--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "mathjs": "^13.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
